tests/NormalTests/paczka1/fuzzy1/65264833.err
Error in line 1: z2MY A964 22,9
Error in line 2: z2MY S571 96,9
Error in line 5: hN3GxkbMxL A702 2,7
Error in line 4: z2MY A702 98,0
Error in line 6: uGKzyWUbHj A964 13,7
Error in line 26: uGKzyWUbHj A907 2,6
Error in line 16: jxCyKg7FRdT A964 23,3
